manifests/libvirt/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openstack
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    openstackhelm.openstack.org/release_uuid: ""
  labels:
    app.kubernetes.io/component: libvirt
    app.kubernetes.io/instance: libvirt
    app.kubernetes.io/name: libvirt
    application: libvirt
    component: libvirt
    release_group: libvirt
  name: libvirt-libvirt-default
  namespace: openstack
spec:
  minReadySeconds: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: libvirt
      app.kubernetes.io/instance: libvirt
      app.kubernetes.io/name: libvirt
      application: libvirt
      component: libvirt
      release_group: libvirt
  template:
    metadata:
      annotations:
        configmap-bin-hash: 5fccaaa328cc462c9988d0947d08040ca8e9af4c76d4f72f8ccd859d222c73ec
        configmap-etc-hash: c28e65cdca6dba2e1cb4ba5d24f858f9aa4ff86afc611628f9d0445d2098faf4
        openstackhelm.openstack.org/release_uuid: ""
      labels:
        app.kubernetes.io/component: libvirt
        app.kubernetes.io/instance: libvirt
        app.kubernetes.io/name: libvirt
        application: libvirt
        component: libvirt
        release_group: libvirt
    spec:
      containers:
      - command:
        - /tmp/libvirt.sh
        image: quay.io/airshipit/libvirt:2025.2-ubuntu_noble
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - bash
              - -c
              - kill $(cat /var/run/libvirtd.pid)
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - /usr/bin/virsh connect
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 5
        name: libvirt
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - /usr/bin/virsh connect
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
        volumeMounts:
        - mountPath: /tmp
          name: pod-tmp
        - mountPath: /tmp/libvirt.sh
          name: libvirt-bin
          readOnly: true
          subPath: libvirt.sh
        - mountPath: /etc/libvirt/libvirtd.conf
          name: pod-shared
          readOnly: true
          subPath: libvirtd.conf
        - mountPath: /etc/libvirt/qemu.conf
          name: libvirt-etc
          readOnly: true
          subPath: qemu.conf
        - mountPath: /etc/libvirt/qemu
          name: etc-libvirt-qemu
        - mountPath: /lib/modules
          name: libmodules
          readOnly: true
        - mountPath: /var/lib/libvirt
          mountPropagation: Bidirectional
          name: var-lib-libvirt
        - mountPath: /var/lib/nova
          mountPropagation: Bidirectional
          name: var-lib-nova
        - mountPath: /run
          name: run
        - mountPath: /dev
          name: dev
        - mountPath: /sys/fs/cgroup
          name: cgroup
        - mountPath: /var/log/libvirt
          name: logs
        - mountPath: /etc/machine-id
          name: machine-id
          readOnly: true
        - mountPath: /etc/ceph
          mountPropagation: Bidirectional
          name: etcceph
        - mountPath: /tmp/client-keyring
          name: ceph-keyring
          readOnly: true
          subPath: key
      dnsPolicy: ClusterFirstWithHostNet
      hostIPC: true
      hostNetwork: true
      hostPID: true
      nodeSelector:
        openstack-compute-node: enabled
      securityContext:
        runAsUser: 0
      serviceAccountName: libvirt
      volumes:
      - emptyDir: {}
        name: pod-tmp
      - configMap:
          defaultMode: 365
          name: libvirt-libvirt-default-bin
        name: libvirt-bin
      - name: libvirt-etc
        secret:
          defaultMode: 292
          secretName: libvirt-libvirt-default-etc
      - hostPath:
          path: /var/lib/openstack-helm/compute/libvirt
        name: etcceph
      - configMap:
          defaultMode: 292
          name: ceph-etc
        name: ceph-etc
      - name: ceph-keyring
        secret:
          secretName: pvc-ceph-client-key
      - hostPath:
          path: /lib/modules
        name: libmodules
      - hostPath:
          path: /var/lib/libvirt
        name: var-lib-libvirt
      - hostPath:
          path: /var/lib/nova
        name: var-lib-nova
      - hostPath:
          path: /run
        name: run
      - hostPath:
          path: /dev
        name: dev
      - hostPath:
          path: /var/log/libvirt
        name: logs
      - hostPath:
          path: /sys/fs/cgroup
        name: cgroup
      - hostPath:
          path: /etc/machine-id
        name: machine-id
      - hostPath:
          path: /etc/libvirt/qemu
        name: etc-libvirt-qemu
      - hostPath:
          path: /etc/modprobe.d
        name: etc-modprobe-d
      - hostPath:
          path: /
          type: Directory
        name: host-rootfs
      - emptyDir: {}
        name: pod-shared
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: libvirt-netpol
  namespace: openstack
spec:
  egress:
  - ports:
    - port: 5000
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          name: docker-registry
  - ports: null
    to:
    - namespaceSelector:
        matchLabels:
          name: oci-image-registry
  - {}
  ingress:
  - {}
  podSelector:
    matchLabels:
      application: libvirt
  policyTypes:
  - Egress
  - Ingress
